--- a/index.html
+++ b/index.html
@@ -51,28 +51,33 @@
     <main>
       <div class="layout-positioner">
         <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
+      </div>
 
         <!-- Место для блока, который нужно пропустить по текущему заданию (Задание №3) -->
-
+      <div class="layout-positioner">
         <div class="layout-index-columns">
-          <section class="about-us">
-            <h2>О нас</h2>
-            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-            <ul class="delivery-services">
-              <li>Деловые Линии</li>
-            	<li>Автотрейдинг</li>
-            	<li>ЖелДорЭкспедиция</li>
-            </ul>
-            <a class="button button-more-about-us" href="#">Подробнее о нас</a>
-          </section>
+          <div class="left-column">
+            <section class="about-us">
+              <h2>О нас</h2>
+              <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+              <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+              <ul class="delivery-services">
+                <li>Деловые Линии</li>
+              	<li>Автотрейдинг</li>
+              	<li>ЖелДорЭкспедиция</li>
+              </ul>
+              <a class="button button-more-about-us" href="#">Подробнее о нас</a>
+            </section>
+          </div>
 
-          <section class="contacts">
-            <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
-            <a class="button button-support" href="#">Напишите нам</a>
-          </section>
+          <div class="right-column">
+            <section class="contacts">
+              <h2>Контакты</h2>
+              <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+              <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+              <a class="button button-support" href="#">Напишите нам</a>
+            </section>
+          </div>
         </div>
       </div>
     </main>
