--- a/catalog.html
+++ b/catalog.html
@@ -74,40 +74,40 @@
                 <section class="filter">
                   <h2>Фильтр:</h2>
                   <form class="filter-form" action="https://echo.htmlacademy.ru" method="get">
-                    <fieldset>
+                    <fieldset class="filter-fieldset filter-fieldset-color">
                       <legend>Цвет</legend>
                       <ul>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-checkbox" id="filter-black" type="checkbox" name="black" checked>
+                          <input class="filter-input filter-input-checkbox visually-hidden" id="filter-black" type="checkbox" name="black" checked>
                           <label for="filter-black">Черный</label>
                         </li>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-checkbox" id="filter-white" type="checkbox" name="white">
+                          <input class="filter-input filter-input-checkbox visually-hidden" id="filter-white" type="checkbox" name="white">
                           <label for="filter-white">Белый</label>
                         </li>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-checkbox" id="filter-blue" type="checkbox" name="blue" checked>
+                          <input class="filter-input filter-input-checkbox visually-hidden" id="filter-blue" type="checkbox" name="blue" checked>
                           <label for="filter-blue">Синий</label>
                         </li>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-checkbox" id="filter-red" type="checkbox" name="red" checked>
+                          <input class="filter-input filter-input-checkbox visually-hidden" id="filter-red" type="checkbox" name="red" checked>
                           <label for="filter-red">Красный</label>
                         </li>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-checkbox" id="filter-pink" type="checkbox" name="pink">
+                          <input class="filter-input filter-input-checkbox visually-hidden" id="filter-pink" type="checkbox" name="pink">
                           <label for="filter-pink">Розовый</label>
                         </li>
                       </ul>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="filter-fieldset filter-fieldset-bluetooth">
                       <legend>Bluetooth</legend>
                       <ul>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-radio" id="filter-blueetooth-yes" type="radio" name="bluetooth" value="yes" checked>
+                          <input class="filter-input filter-input-radio visually-hidden" id="filter-blueetooth-yes" type="radio" name="bluetooth" value="yes" checked>
                           <label for="filter-blueetooth-yes">Есть</label>
                         </li>
                         <li class="filter-option">
-                          <input class="filter-input filter-input-radio" id="filter-bluetooth-no" type="radio" name="bluetooth" value="no">
+                          <input class="filter-input filter-input-radio visually-hidden" id="filter-bluetooth-no" type="radio" name="bluetooth" value="no">
                           <label for="filter-bluetooth-no">Нет</label>
                         </li>
                       </ul>
