Исправляет мелкие недочёты
Меняет кнопки на ссылки в карточках товаров
Меняет цвет для outline нестандартных элементов форм в фильтре
Исправляет блок поиска в хэдэре

--- a/catalog.html
+++ b/catalog.html
@@ -126,12 +126,12 @@
                   <ul class="product-cards-list">
                     <li class="product-card">
                       <h3>
-                        <a href="#">Любительская селфи-палка</a>
+                        <a class="product-name" href="#">Любительская селфи-палка</a>
                       </h3>
                       <p class="product-image">
                         <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                        <button class="button button-product-card button-add-to-cart" type="button">В корзину</button>
-                        <button class="button-product-card button-compare" type="button">Добавить к сравнению</button>
+                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
+                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>500 руб.</b>
@@ -139,12 +139,12 @@
                     </li>
                     <li class="product-card">
                       <h3>
-                        <a href="#">Профессиональная селфи-палка</a>
+                        <a class="product-name" href="#">Профессиональная селфи-палка</a>
                       </h3>
                       <p class="product-image">
                         <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                        <button class="button button-product-card button-add-to-cart" type="button">В корзину</button>
-                        <button class="button-product-card button-compare" type="button">Добавить к сравнению</button>
+                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
+                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>1 500 руб.</b>
@@ -152,12 +152,12 @@
                     </li>
                     <li class="product-card">
                       <h3>
-                        <a href="#">Непотопляемая селфи-палка</a>
+                        <a class="product-name" href="#">Непотопляемая селфи-палка</a>
                       </h3>
                       <p class="product-image">
                         <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                        <button class="button button-product-card button-add-to-cart" type="button">В корзину</button>
-                        <button class="button-product-card button-compare" type="button">Добавить к сравнению</button>
+                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
+                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>2 500 руб.</b>
@@ -165,12 +165,12 @@
                     </li>
                     <li class="product-card new-product">
                       <h3>
-                        <a href="#">Селфи-палка «Следуй за мной»</a>
+                        <a class="product-name" href="#">Селфи-палка «Следуй за мной»</a>
                       </h3>
                       <p class="product-image">
                         <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                        <button class="button button-product-card button-add-to-cart" type="button">В корзину</button>
-                        <button class="button-product-card button-compare" type="button">Добавить к сравнению</button>
+                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
+                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>4 900 руб.</b>
