Добавляет секцию сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -119,6 +119,13 @@
 
               <div class="right-column">
                 <section class="sorting">
+                  <h2>Сортировка:</h2>
+                  <ul class="sorting-criteria">
+                    <li class="current-sorting-criteria"><a href="#">По цене</a></li>
+                    <li><a href="#">По типу</a></li>
+                    <li><a href="#">По популярности</a></li>
+                  </ul>
+                  <a class="sorting-direction highest-first" href="#">Порядок сортировки: по убыванию</a>
                 </section>
 
                 <section class="showcase">
