Добавляет пагинацию каталога

--- a/catalog.html
+++ b/catalog.html
@@ -200,7 +200,15 @@
                       </p>
                     </li>
                   </ul>
-                  <!-- Место для пагинации, которую нужно пропустить по текущему заданию (Задание №3) -->
+                  <div class="paginator">
+                    <a class="previous-page" href="#">Назад</a>
+                    <ol class="page-numbers">
+                      <li class="current-page-number"><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                    </ol>
+                    <a class="next-page" href="#">Вперёд</a>
+                  </div>
                 </section>
               </div>
             </div>
