Добавляет секцию Производители (бренды)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
         <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
       </div>
 
-        <!-- Место для блока, который нужно пропустить по текущему заданию (Задание №3) -->
+      <div class="layout-positioner">
+        <section class="brands">
+          <h2 class="visually-hidden">Производители</h2>
+          <ul class="brands-list">
+            <li class="brand-dji"><img src="img/brands-logo-dji.png" width="260" height="100" alt=""></li>
+            <li class="brand-spgadgets"><img src="img/brands-logo-spgadgets.png" width="260" height="100" alt=""></li>
+            <li class="brand-gopro"><img src="img/brands-logo-gopro.png" width="260" height="100" alt=""></li>
+            <li class="brand-vive"><img src="img/brands-logo-vive.png" width="260" height="100" alt=""></li>
+          </ul>
+          </section>
+      </div>
       <div class="layout-positioner">
         <div class="layout-index-columns">
           <div class="left-column">
