--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <a href="#">Каталог товаров</a>
                 <ul class="catalog-subcategories">
                   <li><a href="#">Виртуальная реальность</a></li>
-                  <li><a href="#">Фитнес-браслеты</a></li>
-                  <li><a href="#">Квадрокоптеры</a></li>
                   <li><a href="#">Моноподы для селфи</a></li>
-                  <li><a href="#">Умные часы</a></li>
                   <li><a href="#">Экшн-камеры</a></li>
+                  <li><a href="#">Фитнес-браслеты</a></li>
+                  <li><a href="#">Умные часы</a></li>
+                  <li><a href="#">Квадрокоптеры</a></li>
                 </ul>
               </li>
               <li class="delivery-link"><a href="#">Доставка</a></li>
@@ -54,6 +54,20 @@
       </div>
 
       <div class="layout-positioner">
+        <section class="types-of-devices">
+          <h2 class="visually-hidden">Представленные виды девайсов</h2>
+          <ul class="types-of-devices-list">
+            <li class="virtual-reality"><a href="#">Виртуальная реальность</a></li>
+            <li class="selfie"><a href="#">Моноподы для селфи</a></li>
+            <li class="camera"><a href="#">Экшн-камеры</a></li>
+            <li class="fitness"><a href="#">Фитнес-браслеты</a></li>
+            <li class="smart-watch"><a href="#">Умные часы</a></li>
+            <li class="drone"><a href="#">Квадрокоптеры</a></li>
+          </ul>
+        </section>
+      </div>
+
+      <div class="layout-positioner">
         <section class="brands">
           <h2 class="visually-hidden">Производители</h2>
           <ul class="brands-list">
@@ -64,6 +78,7 @@
           </ul>
           </section>
       </div>
+
       <div class="layout-positioner">
         <div class="layout-index-columns">
           <div class="left-column">
