Добавляет слайдер популярных продуктов

--- a/index.html
+++ b/index.html
@@ -54,11 +54,105 @@
       </div>
 
       <div class="layout-positioner">
+        <section class="popular-products">
+          <h2 class="visually-hidden">Популярные девайсы</h2>
+          <div class="popular-products-slider-controls">
+            <button class="current-slide-button">Первый слайд</button>
+            <button>Второй слайд</button>
+            <button>Третий слайд</button>
+          </div>
+          <ul class="popular-products-slider-list">
+            <li class="popular-products-slide slide-selfie popular-products-current-slide">
+              <div class="layout-index-columns">
+                <div class="left-column slider-product-image">
+                  <img src="img/slider-selfie.png" width="384" height="486" alt="Палка для селфи">
+                </div>
+                <div class="right-column slider-product-description">
+                  <h3 class="visually-hidden">Самая длинная палка для селфи</h3>
+                  <p class="slogan">Делай селфи, как&nbsp;Бен&nbsp;Стиллер!</p>
+                  <p class="details">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+                  <a class="button" href="#">Подробнее</a>
+                  <table class="product-description-table">
+                    <thead>
+                      <tr>
+                        <th>Длина палки</th>
+                        <th>Вес палки</th>
+                        <th>Материал</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>8,5 м</td>
+                        <td>5 кг</td>
+                        <td>Карбон</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </li>
+            <li class="popular-products-slide slide-fitness">
+              <div class="layout-index-columns">
+                <div class="left-column slider-product-image">
+                  <img src="img/slider-fitness.png" width="345" height="485" alt="Фитнес-браслет">
+                </div>
+                <div class="right-column slider-product-description">
+                  <h3 class="visually-hidden">Мотивирующий фитнес-браслет</h3>
+                  <p class="slogan">Худеем правильно!</p>
+                  <p class="details">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+                  <a class="button" href="#">Подробнее</a>
+                  <table class="product-description-table">
+                    <thead>
+                      <tr>
+                        <th>Без подзарядки</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>48 часов</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </li>
+            <li class="popular-products-slide slide-drone">
+              <div class="layout-index-columns">
+                <div class="left-column slider-product-image">
+                  <img src="img/slider-drone.png" width="526" height="334" alt="Квадрокоптер оснащённый мощным лазером">
+                </div>
+                <div class="right-column slider-product-description">
+                  <h3 class="visually-hidden">Квадрокоптер оснащённый мощным лазером</h3>
+                  <p class="slogan">Порхает как бабочка, жалит как пчела!</p>
+                  <p class="details">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+                  <a class="button" href="#">Подробнее</a>
+                  <table class="product-description-table">
+                    <thead>
+                      <tr>
+                        <th>Дальность полета</th>
+                        <th>Радиус поражения</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>800 м</td>
+                        <td>50 м</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
+
+      <div class="layout-positioner">
         <section class="types-of-devices">
           <h2 class="visually-hidden">Представленные виды девайсов</h2>
           <ul class="types-of-devices-list">
             <li class="virtual-reality"><a href="#">Виртуальная реальность</a></li>
-            <li class="selfie"><a href="#">Моноподы для селфи</a></li>
+            <li class="selfie"><a href="#">Моноподы для&nbsp;селфи</a></li>
             <li class="camera"><a href="#">Экшн-камеры</a></li>
             <li class="fitness"><a href="#">Фитнес-браслеты</a></li>
             <li class="smart-watch"><a href="#">Умные часы</a></li>
@@ -71,16 +165,16 @@
         <section class="brands">
           <h2 class="visually-hidden">Производители</h2>
           <ul class="brands-list">
-            <li class="brand-dji"><img src="img/brands-logo-dji.png" width="260" height="100" alt=""></li>
-            <li class="brand-spgadgets"><img src="img/brands-logo-spgadgets.png" width="260" height="100" alt=""></li>
-            <li class="brand-gopro"><img src="img/brands-logo-gopro.png" width="260" height="100" alt=""></li>
-            <li class="brand-vive"><img src="img/brands-logo-vive.png" width="260" height="100" alt=""></li>
+            <li class="brand-dji"><img src="img/brands-logo-dji.png" width="260" height="100" alt="Логотип DJI"></li>
+            <li class="brand-spgadgets"><img src="img/brands-logo-spgadgets.png" width="260" height="100" alt="Логотип SP Gadgets"></li>
+            <li class="brand-gopro"><img src="img/brands-logo-gopro.png" width="260" height="100" alt="Логотип GoPro"></li>
+            <li class="brand-vive"><img src="img/brands-logo-vive.png" width="260" height="100" alt="Логотип Vive"></li>
           </ul>
           </section>
       </div>
 
       <div class="layout-positioner">
-        <div class="layout-index-columns">
+        <div class="layout-index-columns layout-index-columns-about-us-contacts">
           <div class="left-column">
             <section class="about-us">
               <h2>О нас</h2>
