Добавляет слайдер с преимуществами
Плюс мелкие правки

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <button>Второй слайд</button>
             <button>Третий слайд</button>
           </div>
-          <ul class="popular-products-slider-list">
+          <ul class="popular-products-slide-list">
             <li class="popular-products-slide slide-selfie popular-products-current-slide">
               <div class="layout-index-columns">
                 <div class="left-column slider-product-image">
@@ -160,6 +160,33 @@
           </ul>
         </section>
       </div>
+
+      <section class="features">
+        <div class="layout-positioner">
+          <div class="features-container">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <div class="features-slider-controls">
+              <button class="button">Доставка</button>
+              <button class="button">Гарантия</button>
+              <button class="button current-slide-button">Кредит</button>
+            </div>
+            <ul class="features-slide-list">
+              <li class="slide-delivery">
+                <h3>Доставка</h3>
+                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              </li>
+              <li class="slide-warranty">
+                <h3>Гарантия</h3>
+                <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>Товар, не дом, конечно же.</p>
+              </li>
+              <li class="slide-credit current-slide">
+                <h3>Кредит</h3>
+                <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия&nbsp;кредита. Выгодные для нашего банка, разумеется.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <div class="layout-positioner">
         <section class="brands">
